# PointEngine

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build.gradle  engine.cpp  engine.h  settings.gradle
.github/workflows/: build.yml  c-cpp.yml
gradle/wrapper/: gradle-wrapper.properties
include/: PointEngine.h
include/PointEngine/: Camera.h  Cube.h  GameObject.h  Mesh.h  PointLight.h
include/glad/: glad.h
resources/Models/DefaultModel/SunDir/: SunDir.mtl
resources/Models/backpack/: backpack.mtl
resources/Models/miku/: miku.mtl
resources/Models/xdlol/: uwu.mtl
resources/shaders/: shader.fs  shader.vs
resources/shaders/Mesh/Cube/: shader.vs
resources/shaders/framebuffer/: framebuffers_screen.fs
src/: engine.cpp  engine.h  glad.c
src/Shaders/: VertexShader.glsl
src/components/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  LightManager.cpp  LightManager.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  skybox.h
src/components/Light/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h
src/components/Meshes/: Cube.cpp  Cube.h
src/core/: shader.h
src/game/: game.cpp  game.h
src/main/java/org/PointEngine/: GameObject.java  Main.java  Shader.java
src/main/java/org/PointEngine/src/: fragment.glsl
src/main/java/org/PointEngine/src/components/: Camera.java  GameObject.java
src/main/java/org/PointEngine/src/shaders/: vertex.glsl
src/main/resources/shaders/: fragment.glsl  vertex.glsl
src/resources/shaders/: shader.fs  shader.vs
src/utils/: TextureLoader.cpp  TextureLoader.h
